--- a/01_Basico/Modulo3/Funciones.ipynb
+++ b/01_Basico/Modulo3/Funciones.ipynb
@@ -2448,7 +2448,7 @@
       "metadata": {
         "id": "s0rWgO0K5huY"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -2458,12 +2458,12 @@
       ],
       "metadata": {
         "id": "Fuy0Z6jf6IQd",
-        "outputId": "196a8f99-3359-4138-ef48-f2bd981c0842",
+        "outputId": "e4f956c9-ed16-481d-a38e-156f405d80c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2493,6 +2493,77 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "sent_messages = []\n",
+        "def send_messages(messages):\n",
+        "  for message in messages:\n",
+        "    sent_messages.append(message)\n",
+        "    print(f'\\n{message}')"
+      ],
+      "metadata": {
+        "id": "ecO8DrMRu2w7"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "send_messages(['hola','adios','nos vemos'])\n",
+        "print(sent_messages)"
+      ],
+      "metadata": {
+        "id": "A5I8IHTivwH7",
+        "outputId": "09361c31-7837-4aa3-c629-db8671bdf8eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "hola\n",
+            "\n",
+            "adios\n",
+            "\n",
+            "nos vemos\n",
+            "['hola', 'adios', 'nos vemos']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sent_messages"
+      ],
+      "metadata": {
+        "id": "46Q8-6TryDur",
+        "outputId": "386f1d7b-0e3e-4c78-a712-f581786a64f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hola', 'adios', 'nos vemos']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "---\n",
@@ -2506,6 +2577,71 @@
       "metadata": {
         "id": "DeKTopX9McDP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "copy_messages = sent_messages"
+      ],
+      "metadata": {
+        "id": "CrgGirEbyN3d"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "send_messages(['hola','adios','nos vemos'])"
+      ],
+      "metadata": {
+        "id": "uZ_bCYNbw5Ki",
+        "outputId": "8a4d2ce3-38a1-4e93-eb14-70b73ab35dcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "hola\n",
+            "\n",
+            "adios\n",
+            "\n",
+            "nos vemos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "copy_messages"
+      ],
+      "metadata": {
+        "id": "8e_xP9SWx0zC",
+        "outputId": "ada1a11c-6d46-453c-e2ee-b05d64e5acc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hola', 'adios', 'nos vemos']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2643,7 +2779,7 @@
       "metadata": {
         "id": "LItqvKT2OMdS"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2659,7 +2795,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3088,7 +3224,7 @@
       "metadata": {
         "id": "oLt942aV-KiI"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3103,7 +3239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3126,7 +3262,7 @@
       "metadata": {
         "id": "cA4XkhylQYhn"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3142,7 +3278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3184,7 +3320,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3226,7 +3362,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3259,7 +3395,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3327,7 +3463,7 @@
       "metadata": {
         "id": "flog3R7bdvZn"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3338,7 +3474,7 @@
       "metadata": {
         "id": "ekZkhZeud1HN"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3353,7 +3489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3376,7 +3512,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3408,7 +3544,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3431,7 +3567,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3460,7 +3596,7 @@
       "metadata": {
         "id": "MsHtLxOrf-nB"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3477,7 +3613,7 @@
         "id": "ia8YHqsWf_T0",
         "outputId": "2a49bdaf-f0c9-4e9c-dcde-0854588fbce3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3504,7 +3640,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3554,7 +3690,7 @@
       "metadata": {
         "id": "DTnWKQ2gwx4S"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3580,7 +3716,7 @@
       "metadata": {
         "id": "g7gst4DZAlSO"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3591,7 +3727,7 @@
       "metadata": {
         "id": "kkVZF-lTBS-S"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3607,7 +3743,7 @@
           "height": 35
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3636,7 +3772,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3659,7 +3795,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3693,7 +3829,7 @@
       "metadata": {
         "id": "_OeMpa-OCCIm"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3708,7 +3844,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3731,7 +3867,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3754,7 +3890,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3781,6 +3917,98 @@
       "metadata": {
         "id": "PlqVFUueg2QI"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class usuario:\n",
+        "    \n",
+        "    def __init__(self, first_name, last_name, edad):\n",
+        "        \"\"\"Iniciar nombre y tipo.\"\"\"\n",
+        "        self.first = first_name\n",
+        "        self.last = last_name\n",
+        "        self.edad = edad\n",
+        "\n",
+        "    def describe_user(self):\n",
+        "        \n",
+        "        print(f\"El nombre es {self.first} y su apellido es {self.last} y su edad es de {self.edad} años\")\n",
+        "\n",
+        "    def greeting_user(self):\n",
+        "        \n",
+        "        print(f\"Buenos días {self.first} {self.last} \")"
+      ],
+      "metadata": {
+        "id": "ofiEJna9zX-T"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuario_1 = usuario('Edvin', 'Huamanguillas', 32)\n",
+        "usuario_2 = usuario('Elvis', 'Huamanguillas', 41)\n",
+        "usuario_3 = usuario('Jefferson', 'Huamanguillas', 17)"
+      ],
+      "metadata": {
+        "id": "cp0EkyMf06HM"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuario_1.describe_user()\n",
+        "usuario_2.describe_user()\n",
+        "usuario_3.describe_user()"
+      ],
+      "metadata": {
+        "id": "xI48VupG1HLa",
+        "outputId": "5fb4b6a1-a5f8-4083-abf8-314b499f3b39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El nombre es Edvin y su apellido es Huamanguillas y su edad es de 32 años\n",
+            "El nombre es Elvis y su apellido es Huamanguillas y su edad es de 41 años\n",
+            "El nombre es Jefferson y su apellido es Huamanguillas y su edad es de 17 años\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "usuario_1.greeting_user()\n",
+        "usuario_2.greeting_user()\n",
+        "usuario_3.greeting_user()"
+      ],
+      "metadata": {
+        "id": "wa2Q_l6E1Ocz",
+        "outputId": "5d58c88c-17c7-4bba-e36d-181a00357387",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Buenos días Edvin Huamanguillas \n",
+            "Buenos días Elvis Huamanguillas \n",
+            "Buenos días Jefferson Huamanguillas \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
